# OS-practice

./: .gitignore  26-2-t0  26-2-t0.c  README.md
Attemper_Algorithm/: Algorithm.cpp  Algorithm.h  Algorithm_FCFS.cpp  Algorithm_HRRN.cpp  Algorithm_LLF.cpp  Algorithm_RR.cpp  Algorithm_SJF.cpp  Algorithm_SPF.cpp  Algorithm_SRT.cpp  Algorithm_nonPreemptiveEDF.cpp  Algorithm_nonPreemptivePriority.cpp  Algorithm_preemptiveEDF.cpp  Algorithm_preemptivePriorityScheduling.cpp  BASE.h  Base.cpp  CMakeLists.txt  ExecuteAlgorithm.cpp  ExecuteAlgorithm.h  Executor.cpp  Executor.h  FCFS.cpp  FCFS.h  FormatInput.cpp  FormatInput.h  HRRN.cpp  HRRN.h  Job.cpp  Job.h  ReadFile.cpp  ReadFile.h  SJF.cpp  SJF.h  SRT.cpp  SRT.h  SortJobs.cpp  SortJobs.h  Utils.cpp  Utils.h  main.cpp  test.txt
Attemper_Algorithm/old/: FCFS.h  FormatInput.cpp  FormatInput.h  HRRN.h  ReadFile.h  SJF.h  SRT.h  SortJobs.h
Mymalloc/: CMakeLists.txt  Mymalloc.c  Mymalloc.cpp  Mymalloc.h  main.c
信号量练习/: DiningPhilosopherProblem  DiningPhilosopherProblem.c  P266-31-4  P266-31-4.c  Producter-Comsumer  Producter-Comsumer.c  Reader-Writer  Reader-Writer-v2  Reader-Writer-v2.c  Reader-Writer.c
